style.css
/* --- Variables & Reset --- */
:root {
  --white: hsl(0, 0%, 100%);
  --light-gray: hsl(212, 45%, 89%);
  --grayish-blue: hsl(216, 15%, 48%);
  --dark-blue: hsl(218, 44%, 22%);
  --link: hsl(228, 45%, 44%);
  --transparent-0: transparent;
  --transparent-1: rgba(255, 255, 255, 0.1);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Outfit", sans-serif;
  background-color: var(--light-gray);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 20px;
}

/* --- Card Styling --- */
.card {
  background-color: var(--white);
  border: 2px solid var(--light-gray);
  border-radius: 20px;
  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.08);
  padding: 16px;
  max-width: 320px; /* Limits width on desktop */
  width: 18%; /* Makes it responsive on mobile */
  overflow: hidden;
  position: relative;
  text-align: center;
  transition: transform 2s ease-in-out;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  box-shadow: 0 20px 40px 0 var(--grayish-blue);
  /* Scale effect */
  /* transform: scale(1.02); */
  /* Rotation effect */
  -webkit-transform: translateZ(-1000px) rotateY(90deg);
  -moz-transform: translateZ(-1000px) rotateY(90deg);
  -ms-transform: translateZ(-1000px) rotateY(90deg);
  -o-transform: translateZ(-1000px) rotateY(90deg);
  transform: translateZ(0px) rotateY(360deg);
  transition: transform 2s ease-in-out;
}

.card:hover::before {
  top: 100%;
  left: 100%;
}
.card::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: linear-gradient(
    45deg,
    var(--transparent-0),
    var(--transparent-1),
    var(--transparent-0)
  );
  top: -100%;
  left: -100%;
  transition: all 0.5s ease;
}

.card img {
  width: 100%;
  border-radius: 10px;
  display: block;
}

/* Add some padding inside the card container */
/* .container p:first-child,
.container p:nth-child(1) {
  font-weight: 700;
  padding: 10px 0;
}

.container p:nth-child(2) {
  color: hsl(216, 15%, 48%);
  font-size: 12px;
  font-weight: 400;
} */

.title {
  color: var(--dark-blue);
  font-weight: 700;
  padding: 10px 0;
  line-height: 1.2;
}

.description {
  color: var(--grayish-blue);
  font-size: 12px;
  font-weight: 400;
  line-height: 1.4;
}

/* --- Footer --- */
.attribution {
  font-size: 11px;
  margin-top: 20px;
  bottom: 10px;
  position: absolute;
}

.attribution a {
  color: var(--link);
}

/* --- Responsive Design Start --- */
/* Adjust card width for smaller screens (Small Mobile)*/
@media (min-width: 640px) {
  .card {
    width: 40%;
  }

  .title {
    font-size: 18px;
  }
}

/* Adjust card width for medium screens (medium/tablet)*/
@media (min-width: 768px) {
  .card {
    width: 34%;
  }
}

/* Adjust card width for larger screens (large/desktop),*/
@media (min-width: 1024px) {
  .card {
    width: 25%;
  }
}

/* Adjust card width for extra large screens (extra-large/desktop) */
@media (min-width: 1280px) {
  .card {
    width: 19%;
  }
}

/* Adjust card width for extra extra large screens (extra-extra-large/desktop) */
@media (min-width: 1440px) {
  .card {
    width: 17%;
  }
}

/* Adjust card width for extra extra extra large screens (extra-extra-extra-large/desktop) */
@media (min-width: 1920px) {
  .card {
    width: 13%;
  }
}

/* --- Responsive Design End --- */

